--- a/_clean/css/sass/main.sass
+++ b/_clean/css/sass/main.sass
@@ -2,16 +2,31 @@ $font-stack:    Helvetica, sans-serif
 $primary-color: #333
 $content-width: 1110px
 $red-c: #ea222a
+$grey-c: #dedede
 $rob-r: "RobotoRegular"
 $rob-b: "RobotoBold"
 $rob-l: "RobotoLight"
 $rob-t: "RobotoThin"
 $lato-b: "LatoBold"
+$rob-m: "RobotoMedium"
+$rob-li: "RobotoLightItalic"
+$rob-i: "RobotoItalic"
+$lato-r: "LatoRegular"
+
+.clearfix:after 
+  content: ""
+  display: table
+  clear: both
+
+
 @mixin transition($time)
   -webkit-transition: all $time ease
   -moz-transition:    all $time ease
   -o-transition:      all $time ease
   transition:         all $time ease
+
+@mixin shadow()
+  box-shadow: 0 2px 10px rgba(0,0,0,0.5)  
 
 
 
@@ -23,6 +38,14 @@ a
 h1
   margin: 0
   padding: 0
+  font-size: 32px
+  font-family: $rob-m
+
+.sec-head
+  font-family: $rob-m
+  text-align: center
+  text-transform: uppercase
+  font-size: 32px
   
 body
   font-size: 16px
@@ -53,19 +76,26 @@ header
   position: relative
   overflow: hidden
   z-index: 200
+  .cont-width
+    overflow: hidden
   img
     float: left
+  .menu
+    position: absolute
+    top: 65px
+    left: 0
+    right: 0
+    margin: auto
+    width: 374px
+  #pull
+    display: none
   ul
-    margin: 0
     padding: 0
     display: inline-block
-    margin-left: 250px
     li
       display: inline
       a
         display: inline-block
-        height: 85px
-        line-height: 145px
         font-family: $rob-t
         color: #fff
         margin-right: 22px
@@ -73,6 +103,11 @@ header
         &:hover
           color: $red-c
           border-bottom: solid 1px $red-c
+        &:visited, &:link
+          color: #fff
+          text-decoration: none 
+      
+
   .phone
     width: 175px
     float: right
@@ -106,6 +141,8 @@ header
   margin-top: -100px
   z-index: -1
   width: 100%
+  background-size: cover
+  background-position: center center
   .cont-width
     position: relative
     overflow: hidden
@@ -157,8 +194,510 @@ header
       color: #000
 
 .projects-block
-  height: 690px
+  overflow: hidden
+  padding-bottom: 50px
+  background-size: cover
   background-image: url("../img/projects-bg.jpg")
+  padding-top: 40px
+  margin-top: 3px
+  hr
+    width: 192px
+    height: 2px
+    background-color: $red-c
+    border: 0
+    margin-top: 5px
+    margin-bottom: 30px
+  .fp-item
+    width: 350px
+    background-color: rgba(0,0,0,0.65)
+    padding: 10px
+    float: left
+    margin-left: 30px
+    &:first-child
+      margin-left: 0
+    img
+      border: solid 2px #fff
+      display: block
+      margin: auto
+    h3
+      float: left
+      text-transform: uppercase
+      font-family: $rob-b
+      font-size: 18px
+      margin-left: 20px
+    .price-block
+      width: 100px
+      float: right
+      margin-top: 10px
+      margin-bottom: 10px
+      span 
+        display: block
+      .price
+        color: $red-c
+        flex: 18px
+        font-family: $rob-b
+      .aval
+        font-family: $rob-t
+        font-size: 13px
+    hr
+      clear: both
+      background-color: #525050
+      width: 100%
+    ul
+      list-style-type: none
+      padding: 0
+      margin-left: 20px
+      font-size: 14px
+      li
+        margin-top: 5px
+      .attr
+        font-family: $rob-r
+        color: #7f7f7f
+
+.about
+  background-color: #dedede
+  color: #000
+  overflow: hidden
+  padding-bottom: 40px
+  .cont-width
+    border: solid 3px $red-c
+    margin-top: 60px
+    padding: 23px
+    box-sizing: border-box
+    position: relative
+    h1
+      text-transform: uppercase
+      text-align: center
+      width: 140px
+      margin: auto
+      background-color: #dedede
+      position: absolute
+      left: 0
+      right: 0
+      top: -22px
+    p
+      font-family: $rob-m
+      text-align: center
+      margin-bottom: 25px
+      margin-top: 20px
+    img
+      width: 50%
+      float: left
+      padding-right: 12px
+    .about-right
+      width: 50%
+      float: right
+      padding-left: 12px
+      h2
+        font-family: $rob-m
+        font-size: 16px
+        text-align: center
+        padding: 0
+        margin: 0
+        margin-bottom: 20px
+      ul
+        padding: 0
+        list-style-type: none
+        font-family: $rob-l
+        i
+          font-size: 7px
+          color: $red-c
+          margin-right: 7px
+.benefits
+  overflow: hidden
+  height: 550px
+  background-image: url("../img/benefits-bg.jpg")
+  background-position: center center
+  background-size: cover
+  .cont-width
+    padding-top: 45px
+    text-transform: uppercase
+    text-align: center
+    hr
+      margin-bottom: 0
+      margin-top: 5px
+      width: 312px
+      height: 3px
+      background-color: $red-c
+      border: none
+    .benef-item-wrap
+      overflow: hidden
+      width: 1020px
+      margin: auto
+    .benef-item
+      width: 320px
+      float: left
+      margin-left: 30px
+      margin-top: 40px
+      &:first-child
+        margin-left: 0
+      &:nth-child(4)
+        margin-left: 174px  
+      .ben-icon
+        width: 100px
+        height: 100px
+        background-color: $red-c
+        border-radius: 50%
+        padding-top: 20px
+        margin: auto 
+        @include shadow
+      p
+        font-family: $rob-m
+        font-size: 16px
+        text-transform: none
+.feedback
+  color: #000
+  background-color: #dedede
+  overflow: hidden
+  padding-bottom: 60px
+  h1
+    margin-top: 50px
+    text-align: center
+    text-transform: uppercase
+  hr
+    background-color: $red-c
+    height: 3px
+    border: none
+    width: 380px
+    margin-top: 10px
+  .fb-slider
+    position: relative
+    .fa
+      font-size: 30px
+      color: $red-c
+      position: absolute
+      top: 40%
+      cursor: pointer
+    .fa-chevron-left
+      left: 0
+    .fa-chevron-right
+      right: 0  
+  .fb-item
+    max-width: 920px
+    margin: 0 auto
+    overflow: hidden
+    .fb-img
+      margin-left: 5px
+      width: 120px
+      height: 120px
+      background-image: url("../img/fb-img.png")
+      background-position: center center
+      background-size: cover
+      background-color: transparent
+      margin-bottom: 10px
+      float: left
+      border-radius: 50%
+      @include shadow
+      margin-right: 30px
+    h2
+      font-family: $rob-m
+      text-transform: uppercase
+      font-size: 18px
+      margin-bottom: 0
+    span
+      font-family: $rob-li
+    p
+      font-family: $rob-i
+      margin-top: 20px
+      line-height: 1.3
+footer
+  color: #fff
+  background-color: #191919
+  height: 100px
+  position: relative
+  .socials
+    width: 120px
+    display: inline-block
+    margin-top: 35px
+    a
+      margin-right: 10px
+      &:last-child
+        margin-right: 0
+  ul
+    list-style-type: none
+    display: inline-block
+    position: absolute
+    top: 40px
+    left: 0
+    right: 0
+    margin: auto
+    width: 370px
+    padding: 0
+    li
+      display: inline
+      font-family: $rob-t
+      margin-right: 20px
+      a
+        color: #fff
+        text-decoration: none
+        &:hover
+          color: #fff
+          text-decoration: none
+        &:visited
+          color: #fff  
+          text-decoration: none
+  .contacts
+    margin-top: 30px
+    display: inline-block
+    float: right
+    .mail
+      padding-left: 23px
+    .phone-num
+      font-family: $lato-b
+      font-size: 18px
+    .fa-mobile
+      font-size: 20px
+    .email
+      font-family: $lato-r
+    .fa-envelope-o
+      font-size: 12px
+
+.catalog
+  background-color: $grey-c
+  overflow: hidden
+  color: #000
+  .bread-crumb
+    margin-top: 30px
+    color: #000
+    font-family: $rob-t
+    font-size: 16px
+    b
+      font-family: $rob-m
+      font-size: 14px
+  h1
+    text-align: center
+    text-transform: uppercase
+  hr
+    background-color: $red-c
+    width: 230px
+    height: 3px
+    border: 0
+    margin-top: 5px
+  .checkboxes
+    color: #fff
+    background-color: #9ba4ab
+    overflow: hidden
+    box-sizing: border-box
+    padding-left: 55px
+    padding-right: 55px
+    padding-top: 30px
+    font-family: $rob-t
+    font-size: 14px
+    padding-bottom: 20px
+    .cb-wrapper
+      overflow: hidden
+    button
+      float: none
+      display: block
+      margin: auto
+      margin-top: 20px
+      font-family: $rob-t
+      font-size: 14px
+      line-height: 14px
+      height: 30px
+      padding: 0 40px 0 40px
+    table
+      float: left
+      margin-left: 44px
+      width: 130px
+      &:first-child
+        margin-left: 0
+    td:nth-child(2)
+      padding-left: 25px
+    th
+      font-family: $rob-m
+      margin-bottom: 20px
+      span
+        margin-bottom: 10px
+        display: block
+    .cb-item
+      margin-bottom: 4px
+    input[type="checkbox"] 
+      display: none
+    label 
+      cursor: pointer
+    input[type="checkbox"] + label:before
+      border: 1px solid #fff
+      content: "\00a0"
+      display: inline-block
+      font: 12px/1em sans-serif
+      height: 14px
+      width: 14px
+      margin-right: 7px
+      vertical-align: top
+      margin-top: 2px
+    input[type="checkbox"]:checked + label:before 
+      color: #fff
+      content: "\2713"
+      text-align: center
+    input[type="checkbox"]:checked  
+      font-weight: bold
+  .fp-wrap
+    margin-top: 30px 
+  .fp-item
+    width: 350px
+    background-color: #9ba4ab
+    padding: 10px
+    float: left
+    margin-right: 30px
+    color: #fff
+    margin-bottom: 30px
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5)
+    &:nth-child(3n)
+      margin-right: 0
+    img
+      border: solid 2px #fff
+      display: block
+      margin: auto
+    h3
+      float: left
+      text-transform: uppercase
+      font-family: $rob-b
+      font-size: 18px
+      margin-left: 20px
+    .price-block
+      width: 100px
+      float: right
+      margin-top: 10px
+      margin-bottom: 10px
+      span 
+        display: block
+      .price
+        color: $red-c
+        flex: 18px
+        font-family: $rob-b
+      .aval
+        font-family: $rob-t
+        font-size: 13px
+    hr
+      clear: both
+      background-color: #a8b1b8
+      width: 100%
+      height: 1px
+    ul
+      list-style-type: none
+      padding: 0
+      margin-left: 20px
+      font-size: 14px
+      li
+        margin-top: 5px
+      .attr
+        font-family: $rob-r
+        color: $grey-c
+      .value
+        font-family: $rob-t
+
+.one-item
+  background-color: $grey-c
+  overflow: hidden
+  color: #000
+  padding-bottom: 50px
+  .cont-width
+    padding-top: 30px
+  .item-wrap
+    margin-top: 30px
+    .slider-wrap
+      float: left
+      width: 730px
+      height: 500px
+      position: relative
+      .slider
+        height: 100%
+        box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5)
+        border: solid 3px $grey-c
+        box-sizing: border-box
+        overflow: hidden
+
+      .img-item
+        height: 500px
+        background-position: center center
+        background-size: cover
+
+
+
+      .fa
+        font-size: 35px
+        color: $red-c
+        position: absolute
+        top: 46%
+        cursor: pointer
+        z-index: 200
+      .fa-chevron-left
+        left: 25px
+
+      .fa-chevron-right
+        right: 25px  
+  .item-descr
+    width: 350px
+    background-color: #9ba4ab
+    padding: 10px
+    float: right
+    color: #fff
+    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.5)
+    h3
+      float: left
+      text-transform: uppercase
+      font-family: $rob-m
+      font-size: 22px
+      margin-left: 20px
+    .price-block
+      width: 100px
+      float: right
+      margin-top: 10px
+      margin-bottom: 10px
+      span 
+        display: block
+      .price
+        color: $red-c
+        font-size: 24px
+        font-family: $rob-b
+        line-height: 24px
+        i
+          font-size: 22px
+      .aval
+        font-family: $rob-t
+        font-size: 13px
+    hr
+      clear: both
+      background-color: #a8b1b8
+      width: 100%
+      height: 1px
+      border: none
+    ul
+      list-style-type: none
+      padding: 0
+      margin-left: 20px
+      font-size: 14px
+      li
+        margin-top: 5px
+      .attr
+        font-family: $rob-r
+        color: $grey-c
+      .value
+        font-family: $rob-t
+    span.descr
+      margin-left: 20px
+      font-size: 14px
+      color: #dadadb
+      margin-bottom: 10px
+      display: block
+    p
+      margin-left: 20px
+      font-family: $rob-t
+      font-size: 14px
+
+        
+  
+
+
+    
+    
+
+
+
+
+
+
 
 
 
